logs/coded4.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coded4'...
Compiling './lib/python3.5/site-packages/coded4/__main__.py'...
***   File "./lib/python3.5/site-packages/coded4/__main__.py", line 24
    print format_output(args.directory, contributors, args.output)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coded4/approx.py'...
***   File "./lib/python3.5/site-packages/coded4/approx.py", line 27
    raise ValueError, "Unknown approximation '%s'" % approx_algo
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coded4/cluster.py'...
***   File "./lib/python3.5/site-packages/coded4/cluster.py", line 26
    raise ValueError, "Unknown clustering algorithm '%s'" % cluster_algo
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coded4/output.py'...
***   File "./lib/python3.5/site-packages/coded4/output.py", line 18
    raise ValueError, "Unknown or unsupported output format '%s'" % output_format
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coded4/vcs.py'...
***   File "./lib/python3.5/site-packages/coded4/vcs.py", line 19
    raise ValueError, "Could not find any known version control system in given directory"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coded4-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
